# binance_prices

./: Dockerfile  README.md  binance_prices.py  binance_prices_to_excel.py  cotacao_btc.xlsx  pyproject.toml
